cmake_minimum_required(VERSION 3.3)
project(Whiskey)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    include/ast.h
    include/callable.h
    include/class.h
    include/ctor.h
    include/dict.h
    include/eval.h
    include/exception.h
    include/function.h
    include/gc.h
    include/lexer.h
    include/method.h
    include/object.h
    include/parser.h
    include/position.h
    include/program_file.h
    include/return_value.h
    include/str.h
    include/string_reader.h
    include/syntax_error.h
    include/tests.h
    include/token.h
    include/type.h
    include/value.h
    include/yolo.h
    test/class.c
    test/dict.c
    test/eval.c
    test/exception.c
    test/lexer.c
    test/parser.c
    test/position.c
    test/program_file.c
    test/SConscript
    test/str.c
    test/string_reader.c
    test/tests.c
    test/yolo.c
    ast.c
    class.c
    dict.c
    eval.c
    exception.c
    function.c
    gc.c
    lexer.c
    LICENSE
    main.c
    Makefile
    method.c
    object.c
    parser.c
    position.c
    program_file.c
    README.md
    return_value.c
    SConstruct
    scope.c
    str.c
    string_reader.c
    syntax_error.c
    token.c
    value.c)

add_executable(Whiskey ${SOURCE_FILES})